--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Description: This file contains all structure of my portfolio page
           <h2>Lorem ipsum dolor sit amet
           </h2>
           <br>
-          <a href="#" class="btn">Download Resume
+          <a href="#" class="btn">Connect To Server
           </a>
         </div>
         </div>
